# Roxal

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  ROXAL_VXWORKS_BUILD.md  Roxal_Build_VxWorks.txt  build_antlr.sh  build_antlr_vxworks.sh  build_ffi.sh  build_ffi_vxworks.sh  build_icu.sh  build_icu_vxworks.sh  build_roxal.sh  build_roxal_vxworks.sh  compute-server-plan.md  const-mvcc-impl-proposal.md  const-spec.md  conversions.md  implementation-notes.md  install-deps.sh  main.cpp  roxal-for-devs.md  runtests.py
benchmarks/: deltablue.rox  smallpt.rox
compiler/: ASTEditor.cpp  ASTEditor.h  ASTGenerator.cpp  ASTGenerator.h  ASTGraphviz.cpp  ASTGraphviz.h  ArgsView.h  AsyncIOManager.cpp  AsyncIOManager.h  Builtin.cpp  Builtin.h  BuiltinModule.cpp  BuiltinModule.h  CallableInfo.cpp  CallableInfo.h  Chunk.cpp  Chunk.h  ClientCall.cpp  ClientCall.h  ComputeConnection.cpp  ComputeConnection.h  ComputeProtocol.h  ComputeServer.cpp  ComputeServer.h  Connector.cpp  Connector.h  CudaRuntime.h  Error.h  ExecutionStatus.h  FFI.cpp  FFI.h  InterpretResult.h  Introspection.cpp  Introspection.h  LazyModuleRegistry.cpp  LazyModuleRegistry.h  ModuleCache.cpp  ModuleCache.h  ModuleFileIO.cpp  ModuleFileIO.h  (+58 more)
compiler/dds/: AsyncDDSManager.cpp  AsyncDDSManager.h  DdsAdapter.cpp  DdsAdapter.h  ModuleDDS.cpp  ModuleDDS.h
compiler/grpc/: ClientCall.cpp  ClientCall.h  Connector.cpp  Connector.h  ModuleGrpc.cpp  ModuleGrpc.h  ProtoAdapter.cpp  ProtoAdapter.h
compiler/grpc/protos/: arithematic.proto  arithstream.proto  roxal_examples.proto
compiler/protos/: arithematic.proto  arithstream.proto  graph.proto  route_guide.proto
core/: AST.cpp  AST.h  Roxal.g4  TimeDuration.h  TimePoint.h  atomic.cpp  atomic.h  common.cpp  common.h  memory.h  queue.h  types.cpp  types.h
core/sgcl/: sgcl.h
core/sgcl/detail/: collector.h
dataflow/: CMakeLists.txt  DataflowEngine.cpp  DataflowEngine.h  Func.cpp  Func.cpp.bak  Func.h  Func.h.bak  FuncNode.cpp  FuncNode.h  Signal.cpp  Signal.h  Tests.cpp  Tests.cpp.bak  Tests.h  Tests.h.bak  Value.cpp  Value.h  dataflow_engine_islands_sketch.md  main.cpp.bak
dataflow/scripts/: concat_dot_images.py  concat_dot_pdfs.py
examples/: phi3.rox  phi4.rox  qt_socket_server.cpp  rfdetr_detect.rox  rtdetr_detect.rox  sam2_segment.rox  socket_client.cpp  socket_server.cpp  yolov8_detect.rox
modules/: dds.rox  fileio.rox  math.rox  media.rox  regex.rox  socket.rox  sys.rox
modules/ai/: add-sub.onnx  dfine_nano_fp16.onnx  dfine_nano_int8.onnx  double-dynamic.onnx  identity-10.onnx  nn.rox
modules/ymconnect/: ClientInterface.h  InteropHelper.h  LibInterface.h  ymconnect.rox
packaging/: Dockerfile  README.md  build-deb.sh  docker-build.sh
packaging/templates/: deps-noble.txt  postrm  roxal.conf
scripts/: grpc_arithmetic_server.py  grpc_everything_server.py
test_runs/: 2024-05-26-runtests-nocache.md
tests/: ArrayMulti.idl  ArrayNested.idl  ArrayTypes.idl  BoundedTypes.idl  ComplexTypes.idl  HelloWorldData.idl  actor1.out  actor1.rox  actor2.out  actor2.rox  actor3.out  actor3.rox  actor4.out  actor4.rox  actor5.out  actor5.rox  actor6.out  actor6.rox  actor7.out  actor7.rox  actor8.out  actor8.rox  actor9.rox  actor_closure1.out  actor_closure1.rox  actor_closure2.err  actor_closure2.out  actor_closure2.rox  actor_closure3.err  actor_closure3.rox  actor_concat_stress.rox  actor_const_param.rox  actor_const_param_aliased.rox  actor_const_param_err.rox  actor_future.out  actor_future.rox  actor_init.out  actor_init.rox  actor_inter.out  actor_inter.rox  (+1040 more)
tests/conversions/: conv_explicit_nonstrict_bool_to_byte.rox  conv_explicit_nonstrict_bool_to_decimal.rox  conv_explicit_nonstrict_bool_to_int.rox  conv_explicit_nonstrict_bool_to_real.rox  conv_explicit_nonstrict_bool_to_string.rox  conv_explicit_nonstrict_byte_to_bool.rox  conv_explicit_nonstrict_byte_to_decimal.rox  conv_explicit_nonstrict_byte_to_int.rox  conv_explicit_nonstrict_byte_to_real.rox  conv_explicit_nonstrict_byte_to_string.rox  conv_explicit_nonstrict_decimal_to_bool.rox  conv_explicit_nonstrict_decimal_to_byte.rox  conv_explicit_nonstrict_decimal_to_int.rox  conv_explicit_nonstrict_decimal_to_real.rox  conv_explicit_nonstrict_decimal_to_string.rox  conv_explicit_nonstrict_enum_to_int.rox  conv_explicit_nonstrict_enum_to_string.rox  conv_explicit_nonstrict_int_to_bool.rox  conv_explicit_nonstrict_int_to_byte.rox  conv_explicit_nonstrict_int_to_decimal.rox  conv_explicit_nonstrict_int_to_real.rox  conv_explicit_nonstrict_int_to_string.rox  conv_explicit_nonstrict_real_to_bool.rox  conv_explicit_nonstrict_real_to_int.rox  conv_explicit_nonstrict_real_to_string.rox  conv_explicit_nonstrict_string_to_bool.rox  conv_explicit_nonstrict_string_to_byte.rox  conv_explicit_nonstrict_string_to_decimal.rox  conv_explicit_nonstrict_string_to_enum.rox  conv_explicit_nonstrict_string_to_int.rox  conv_explicit_nonstrict_string_to_real.rox  conv_explicit_strict_bool_to_byte.rox  conv_explicit_strict_bool_to_int.rox  conv_explicit_strict_bool_to_real.rox  conv_explicit_strict_bool_to_string.rox  conv_explicit_strict_byte_to_bool.rox  conv_explicit_strict_byte_to_decimal.rox  conv_explicit_strict_byte_to_int.rox  conv_explicit_strict_byte_to_real.rox  conv_explicit_strict_decimal_to_bool.rox  (+54 more)
tests/folder_init/: init.rox
tests/folder_single/: single.rox
tests/pkg1/: main.out  main.rox
tests/pkg1/pkg2/: mod3.rox
tests/ui/: button.out  button.rox  checkbox.out  checkbox.rox  image.out  image.rox  label_basic.out  label_basic.rox  slider.out  slider.rox  switch.out  switch.rox  textarea.out  textarea.rox  widgets_example.rox
toolchains/: vxworks.cmake  vxworksffi.cmake
ui/: ModuleUI.cpp  ModuleUI.h  lv_conf.h  ui.rox
vscode/: README.md  language-configuration.json  package.json  roxal-vscode-1.0.0.vsix  roxal-vscode-1.0.1.vsix  roxal-vscode-1.0.2.vsix  roxal-vscode-1.0.3.vsix
vscode/syntaxes/: roxal.tmLanguage.json
